# Insight_AI

./: LICENSE  chunkes.json  chunkes_with_errors_entity_with_description.json  description_for_entities.py  entities.json  entity_extraction_responses_chunkes_with_errors.json  entity_extraction_responses_with_ec.json  entity_extraction_responses_without_ec.json  entity_finder.py  entity_pre_procesing.py  entity_relation_extraction_responses.json  entity_relation_extraction_responses_with_ec.json  entity_with_description_responses_with_ec.json  final_graph.pkl  formating.py  graph.pkl  json_lower_case.py  knowledge.ipynb  main.py  new_graph.pkl  pyproject.toml  rd.py  relation_pre_procesing.py  relations.json  relationship_extraction.py
agents/: search_agent.py
data_output/research_papers/: chunks.csv  connected_nodes.txt  graph.csv  pain_chunks.csv  pain_graph.csv
models/: ollama_models.py
prompts/: search_agnet_promt.py
tools/: download_research_papers.py  get_knowledge_graph.py  get_research_papers.py
utils/: GraphVisualizer.py  df_helpers.py  prompts.py
