[tool.poetry]
name = "Insight AI"
version = "0.1.0"
description = ""
authors = ["Shreyas Waghnode <shreyasw496@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
termcolor = "2.4.0"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
