[tool.poetry]
name = "insight-ai"
version = "0.0.1"
description = "init"
authors = ["sudhanshu-19102003 <sudhanshu19102003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
