[tool.poetry]
name = "insight-ai"
version = "0.0.1"
description = "init"
authors = ["sudhanshu-19102003 <sudhanshu19102003@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.2"
requests = "^2.32.3"
lxml = "^5.3.0"
pyvis = "^0.3.2"
seaborn = "^0.13.2"
langchain = "^0.3.1"
yachalk = "^0.1.6"
langchain-community = "^0.3.1"
tqdm = "^4.66.5"
unstructured = {extras = ["pdf"], version = "^0.15.13"}
python-magic-bin = "^0.4.14"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
python-louvain = "^0.16"
openai = "^1.59.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
